force-app/main/default/objects/Chamado__c/Chamado__c.object-meta.xml
<CustomObject>
    <label>Chamado</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número de Chamado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chamados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>