force-app/main/default/objects/Chamado__c/fields/Area_Envolvida__c.field-meta.xml
<CustomField>
    <fullName>Area_Envolvida__c</fullName>
    <label>Área Envolvida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TECNOLOGIA</fullName>
            </value>
            <value>
                <fullName>BACKOFFICE</fullName>
            </value>
            <value>
                <fullName>GESTÃO</fullName>
            </value>
            <value>
                <fullName>MEDIDOR</fullName>
            </value>
            <value>
                <fullName>BILLING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>