force-app/main/default/objects/Chamado__c/fields/AssuntoN__c.field-meta.xml
<CustomField>
    <fullName>AssuntoN__c</fullName>
    <label>Assunto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTERAÇÃO DE VENCIMENTO</fullName>
            </value>
            <value>
                <fullName>CANCELAMENTO DE FATURA</fullName>
            </value>
            <value>
                <fullName>AUMENTO DE CARGA</fullName>
            </value>
            <value>
                <fullName>ALTERAÇÃO DE ENDEREÇO</fullName>
            </value>
            <value>
                <fullName>DANOS ELÉTRICOS</fullName>
            </value>
            <value>
                <fullName>FATURA INDISPONÍVEL</fullName>
            </value>
            <value>
                <fullName>CRITICAL CASE</fullName>
            </value>
            <value>
                <fullName>MEMBER GET MEMBER</fullName>
            </value>
            <value>
                <fullName>MEDIDOR</fullName>
            </value>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>PAGAMENTO PARA A DISTRIBUIDORA</fullName>
            </value>
            <value>
                <fullName>PROBLEMAS COM A FATURA LUZ</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>CADASTRO</fullName>
            </value>
            <value>
                <fullName>CONTRATO</fullName>
            </value>
            <value>
                <fullName>CONSUMO IRREGULAR (MEDIDOR)</fullName>
            </value>
            <value>
                <fullName>DESAGREGADOR</fullName>
            </value>
            <value>
                <fullName>ANALISE DE FATURAS</fullName>
                <label>ANÁLISE DE FATURAS</label>
            </value>
            <value>
                <fullName>ANÁLISE DE CONSUMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>