force-app/main/default/objects/Chamado__c/fields/CNPJ_CPF__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF__c</fullName>
    <label>CNPJ/CPF</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>