force-app/main/default/objects/Chamado__c/fields/Data_Acompanhamento_Pos_Solucao__c.field-meta.xml
<CustomField>
    <fullName>Data_Acompanhamento_Pos_Solucao__c</fullName>
    <label>Data Acompanhamento Pós Solução</label>
    <type>Date</type>
</CustomField>