force-app/main/default/objects/Chamado__c/fields/Data_de_Inicio_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Inicio_de_Contrato__c</fullName>
    <label>Data de Inicio de Contrato</label>
    <type>Date</type>
</CustomField>