force-app/main/default/objects/Chamado__c/fields/Data_Gestao__c.field-meta.xml
<CustomField>
    <fullName>Data_Gestao__c</fullName>
    <label>Data Gestão</label>
    <type>Date</type>
</CustomField>