force-app/main/default/objects/Chamado__c/fields/Data_Previs_o_Distribuidora__c.field-meta.xml
<CustomField>
    <fullName>Data_Previs_o_Distribuidora__c</fullName>
    <label>Data Previsão Distribuidora</label>
    <type>Date</type>
</CustomField>