force-app/main/default/objects/Chamado__c/fields/Data_Previsao_Outra_Area__c.field-meta.xml
<CustomField>
    <fullName>Data_Previsao_Outra_Area__c</fullName>
    <label>Data Previsão Outra Área</label>
    <type>Date</type>
</CustomField>