force-app/main/default/objects/Chamado__c/fields/DiscursoRetencaoCliente__c.field-meta.xml
<CustomField>
    <fullName>DiscursoRetencaoCliente__c</fullName>
    <label>Discurso de retenção do cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>