force-app/main/default/objects/Chamado__c/fields/Distribuidora__c.field-meta.xml
<CustomField>
    <fullName>Distribuidora__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distribuidora</label>
    <referenceTo>Distributor__c</referenceTo>
    <relationshipLabel>Chamados</relationshipLabel>
    <relationshipName>Chamados</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>