force-app/main/default/objects/Chamado__c/fields/IdColaborador__c.field-meta.xml
<CustomField>
    <fullName>IdColaborador__c</fullName>
    <label>IdColaborador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>