force-app/main/default/objects/Chamado__c/fields/IdUnidade__c.field-meta.xml
<CustomField>
    <fullName>IdUnidade__c</fullName>
    <label>IdUnidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>