force-app/main/default/objects/Chamado__c/fields/Justificativa__c.field-meta.xml
<CustomField>
    <fullName>Justificativa__c</fullName>
    <label>Justificativa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>