force-app/main/default/objects/Chamado__c/fields/Justificativa_insencao_multa__c.field-meta.xml
<CustomField>
    <fullName>Justificativa_insencao_multa__c</fullName>
    <label>Justificativa</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>