force-app/main/default/objects/Chamado__c/fields/Media_de_meses_remanescente__c.field-meta.xml
<CustomField>
    <fullName>Media_de_meses_remanescente__c</fullName>
    <label>Média de meses remanescente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>