force-app/main/default/objects/Chamado__c/fields/Media_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Media_Mensal__c</fullName>
    <label>Média Mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>