force-app/main/default/objects/Chamado__c/fields/Meses_restante_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Meses_restante_de_contrato__c</fullName>
    <label>Meses restante de contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>