force-app/main/default/objects/Chamado__c/fields/Meses_utilizados__c.field-meta.xml
<CustomField>
    <fullName>Meses_utilizados__c</fullName>
    <label>Meses utilizados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>