force-app/main/default/objects/Chamado__c/fields/MotivoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoCancelamento__c</fullName>
    <label>Motivo do cancelamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>