force-app/main/default/objects/Chamado__c/fields/Multa_de_fidelidade__c.field-meta.xml
<CustomField>
    <fullName>Multa_de_fidelidade__c</fullName>
    <label>Multa de fidelidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>