force-app/main/default/objects/Chamado__c/fields/N_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>N_do_Cliente__c</fullName>
    <label>N°do Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>