force-app/main/default/objects/Chamado__c/fields/Nome_da_Mae__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Mae__c</fullName>
    <label>Nome da Mãe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>