force-app/main/default/objects/Chamado__c/fields/Nome_do_Contato__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Contato__c</fullName>
    <label>Nome do Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>