force-app/main/default/objects/Chamado__c/fields/OpcaoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>OpcaoCancelamento__c</fullName>
    <label>Opção de cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instalação de Placas Solares</fullName>
            </value>
            <value>
                <fullName>Portabilidade</fullName>
            </value>
            <value>
                <fullName>Débito com Distribuidora</fullName>
            </value>
            <value>
                <fullName>Aumento de consumo de energia</fullName>
            </value>
            <value>
                <fullName>Atraso no recebimento de faturas</fullName>
            </value>
            <value>
                <fullName>Fechou com concorrentes</fullName>
            </value>
            <value>
                <fullName>Insatisfação com Serviço</fullName>
            </value>
            <value>
                <fullName>Desconfiança com a transferência de titularidade</fullName>
            </value>
            <value>
                <fullName>Insatisfação com a demora na migração</fullName>
            </value>
            <value>
                <fullName>Desconto entregue inferior ao ofertado</fullName>
            </value>
            <value>
                <fullName>Assinou por engano</fullName>
            </value>
            <value>
                <fullName>Desistência / Sem motivo</fullName>
            </value>
            <value>
                <fullName>Venda forçada</fullName>
            </value>
            <value>
                <fullName>Inadimplência na Luz</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>