force-app/main/default/objects/Chamado__c/fields/Org_o_Expedidor__c.field-meta.xml
<CustomField>
    <fullName>Org_o_Expedidor__c</fullName>
    <label>Orgão Expedidor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>