force-app/main/default/objects/Chamado__c/fields/Pagar_medidor__c.field-meta.xml
<CustomField>
    <fullName>Pagar_medidor__c</fullName>
    <label>Pagar medidor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>