force-app/main/default/objects/Chamado__c/fields/Pedir_isen_o_da_instala_o_do_medidor__c.field-meta.xml
<CustomField>
    <fullName>Pedir_isen_o_da_instala_o_do_medidor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedir isenção da instalação do medidor.</label>
    <type>Checkbox</type>
</CustomField>