force-app/main/default/objects/Chamado__c/fields/Pedir_isen_o_da_multa_de_fidelidade__c.field-meta.xml
<CustomField>
    <fullName>Pedir_isen_o_da_multa_de_fidelidade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedir isenção da multa de fidelidade</label>
    <type>Checkbox</type>
</CustomField>