force-app/main/default/objects/Chamado__c/fields/Pessoa_F_sica_Jur_dica__c.field-meta.xml
<CustomField>
    <fullName>Pessoa_F_sica_Jur_dica__c</fullName>
    <label>Pessoa Física/Jurídica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PF</fullName>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>