force-app/main/default/objects/Chamado__c/fields/Plano_Fidelidade__c.field-meta.xml
<CustomField>
    <fullName>Plano_Fidelidade__c</fullName>
    <label>Plano</label>
    <length>255</length>
    <type>Text</type>
</CustomField>