force-app/main/default/objects/Chamado__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <label>Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GD</fullName>
            </value>
            <value>
                <fullName>GF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>