force-app/main/default/objects/Chamado__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
                <default>true</default>
                <label>Aberto</label>
            </value>
            <value>
                <fullName>Em Tratativa</fullName>
            </value>
            <value>
                <fullName>Aguardando a Distribuidora</fullName>
            </value>
            <value>
                <fullName>Aguardando Gestão</fullName>
            </value>
            <value>
                <fullName>Em atendimento</fullName>
            </value>
            <value>
                <fullName>Aguardando outra área</fullName>
            </value>
            <value>
                <fullName>Aguardando Cliente</fullName>
            </value>
            <value>
                <fullName>Acompanhamento pós Solução</fullName>
            </value>
            <value>
                <fullName>Encerrado</fullName>
                <color>#009900</color>
                <label>Encerrado</label>
            </value>
            <value>
                <fullName>Cancelado</fullName>
                <color>#990000</color>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>