force-app/main/default/objects/Chamado__c/fields/Tempo_contratado__c.field-meta.xml
<CustomField>
    <fullName>Tempo_contratado__c</fullName>
    <label>Tempo contratado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>