force-app/main/default/objects/Chamado__c/fields/UC__c.field-meta.xml
<CustomField>
    <fullName>UC__c</fullName>
    <label>UC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>