force-app/main/default/objects/Chamado__c/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade</label>
    <referenceTo>Units__c</referenceTo>
    <relationshipLabel>Chamados</relationshipLabel>
    <relationshipName>Chamados</relationshipName>
    <type>Lookup</type>
</CustomField>