force-app/main/default/objects/Chamado__c/recordTypes/Atendimento_N2.recordType-meta.xml
<RecordType>
    <fullName>Atendimento_N2</fullName>
    <active>true</active>
    <label>Atendimento N2</label>
</RecordType>