force-app/main/default/objects/Chamado__c/recordTypes/Cancelamento.recordType-meta.xml
<RecordType>
    <fullName>Cancelamento</fullName>
    <active>true</active>
    <label>Cancelamento</label>
</RecordType>