force-app/main/default/objects/Chamado__c/recordTypes/Chamados.recordType-meta.xml
<RecordType>
    <fullName>Chamados</fullName>
    <active>true</active>
    <label>Chamados</label>
</RecordType>