force-app/main/default/objects/Chamado__c/recordTypes/Solicitacao_Parceiro.recordType-meta.xml
<RecordType>
    <fullName>Solicitacao_Parceiro</fullName>
    <active>true</active>
    <description>Solicitações de Parceiro</description>
    <label>Solicitação Parceiro</label>
</RecordType>