force-app/main/default/objects/Chamado__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Farol_SLA__c</columns>
    <columns>Assunto__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Prioridade__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo_de_Chamado__c</columns>
    <columns>Caso_Atrelado__c</columns>
    <columns>Solicitante__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>