force-app/main/default/objects/Chamado__c/listViews/ATENDIMENTO_N2.listView-meta.xml
<ListView>
    <fullName>ATENDIMENTO_N2</fullName>
    <columns>NAME</columns>
    <columns>Nome_da_Conta__c</columns>
    <columns>AssuntoN__c</columns>
    <columns>Farol_Chamado__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Prioridade__c</columns>
    <columns>Status__c</columns>
    <columns>Data_Previs_o_Distribuidora__c</columns>
    <columns>Tipo_de_Chamado__c</columns>
    <columns>Caso_Atrelado__c</columns>
    <columns>Solicitante__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Chamado__c.Atendimento_N2</value>
    </filters>
    <label>ATENDIMENTO N2</label>
</ListView>