force-app/main/default/objects/Chamado__c/listViews/BackOffice_Chamado.listView-meta.xml
<ListView>
    <fullName>BackOffice_Chamado</fullName>
    <filterScope>Queue</filterScope>
    <label>BackOffice</label>
    <queue>BackOffice</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>