force-app/main/default/objects/Chamado__c/listViews/Chamados_Financeiro.listView-meta.xml
<ListView>
    <fullName>Chamados_Financeiro</fullName>
    <columns>NAME</columns>
    <columns>Farol_SLA__c</columns>
    <columns>AssuntoN__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Prioridade__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo_de_Chamado__c</columns>
    <columns>Caso_Atrelado__c</columns>
    <columns>Solicitante__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>pmora</value>
    </filters>
    <label>Chamados Financeiro</label>
</ListView>