force-app/main/default/objects/Chamado__c/listViews/Juliana_chamados.listView-meta.xml
<ListView>
    <fullName>Juliana_chamados</fullName>
    <columns>NAME</columns>
    <columns>Farol_SLA__c</columns>
    <columns>Assunto__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Prioridade__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo_de_Chamado__c</columns>
    <columns>Caso_Atrelado__c</columns>
    <columns>Solicitante__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Juliana</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Encerrado,Cancelado</value>
    </filters>
    <label>Juliana - chamados</label>
</ListView>