force-app/main/default/objects/Chamado__c/listViews/Meus_chamados.listView-meta.xml
<ListView>
    <fullName>Meus_chamados</fullName>
    <columns>NAME</columns>
    <columns>Farol_SLA__c</columns>
    <columns>Assunto__c</columns>
    <columns>Status__c</columns>
    <columns>Prioridade__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Solicitante__c</columns>
    <filterScope>Mine</filterScope>
    <label>Meus chamados</label>
</ListView>